# src/app/api/model/health-check.ts
@@ -1,0 +1,22 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface HealthCheck { 
+    /**
+     * \'ok\' on 200, \'degraded\' on 503.
+     */
+    status: string;
+    /**
+     * \'ok\' on 200, \'error\' on 503.
+     */
+    database: string;
+}
+
