# src/app/api/model/models.ts
@@ -28,8 +28,10 @@ export * from './exercise';
 export * from './generate-plan-request';
 export * from './generate-plan-response';
 export * from './generate-plan-tokens-used';
+export * from './generate-training-request';
 export * from './generate-training-response';
 export * from './generate-training-tokens-used';
+export * from './health-check';
 export * from './invitation-status-enum';
 export * from './join-magic-cancelled-response';
 export * from './join-magic-cancelled-response-code-enum';
@@ -38,6 +40,7 @@ export * from './join-magic-error-code-enum';
 export * from './join-request-policy-enum';
 export * from './join-request-status-enum';
 export * from './language-enum';
+export * from './logout';
 export * from './magic-action-join-request';
 export * from './magic-action-join-request-status-enum';
 export * from './me';
